--- a/index.html
+++ b/index.html
@@ -3,207 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Maximus</title>
-    <style>
-        @charset "UTF-8";
-
-    body{
-        margin: 0;
-    }
-
-    header{
-        background: #333;
-        color: white;
-        text-align: center;
-        padding: 20px;
-    }
-
-    h1{
-        color: #fc3;
-        font-weight: normal;
-        margin: 0;
-        text-transform: uppercase;
-    }
-
-    h3{
-        margin: 10px 0 0 0;
-        /* margin-top: 10px; */
-    }
-
-    nav{
-        background: #555;
-    }
-
-    nav a{
-        color: #fc3;
-        text-decoration: none;
-        padding: 10px;
-        display: inline-block;
-        background: #444;
-    }
-
-    nav a:hover{
-        background: #555;
-    }
-
-    main{
-        display: flex;
-    }
-
-/* article, aside{
-    border: 4px solid red;
-} */
-
-    article{
-        flex: 2;
-        background: #eee;
-        padding: 15px;
-    }
-
-    .ninja{
-        font-size: 12px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-    span{
-        border: 1px solid #fc3;
-        border-radius: 3px;
-        padding: 3px;
-    }
-
-    aside{
-        flex: 1;
-        padding: 10px;
-    }
-
-    div#venedig{
-        padding: 80px 10px 10px 10px;
-    }
-
-    #venedig{
-        background: url('images/venedig.jpg');
-        background-size: cover;
-    }
-
-    #venedig section{
-        background: rgba(0, 0, 0, .5);
-        padding: 8px;
-        color: white;
-    }
-
-    h5{
-        margin: 0;
-    }
-
-    #sangi section p{
-        margin: 0;
-    }
-
-    div#sangi{
-        margin-top: 30px;
-        padding: 80px 10px 10px 10px;
-    }
-
-    #sangi{
-        background: url('images/sangimignano.jpg');
-        background-size: cover;
-    }
-
-    #sangi section{
-        background: rgba(0, 0, 0, .5);
-        padding: 8px;
-        color: white;
-    }
-
-    #sangi section p{
-        margin: 0;
-    }
-
-    footer{
-        background: #333;
-        display: flex;
-        padding: 10px;
-    }
-
-    section{
-        flex: 1;
-        padding: 14px;
-    }
-
-    section h4{
-        color: rgb(221, 129, 8);
-        margin: 0;
-        margin-bottom: 0;
-    }
-
-    section p{
-        color: #eee;
-        margin-top: 0;
-    }
-    </style>
+    <title>Main</title>
 </head>
 <body>
-    <header>
-        <h1>Ullamcorper Maximus</h1>
-        <h3>Mauris a ornare</h3>
-    </header>
-    
-    <nav>
-        <a href="#">Lorem</a><a href="#">Ipsum</a><a href="#">Dolor</a>
-    </nav>
-    
-    <main>
-        <article>
-            <p class="ninja">Scriptor: Mohamed Said</p>
-            <p class="ninja">Categoria: <span>Webdevelopment</span> <span>CSS</span> <span>Selectors</span></p>
-            <h2>Donec maximus</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat consequatur error, ex impedit deserunt eligendi aspernatur ratione quia ipsam distinctio repellendus dignissimos nobis ipsum optio, excepturi rerum tempore fugiat.</p>
-        </article>
-
-        <aside>
-            <h2>Quod accusantium</h2>
-            <p>Lite text.</p>
-            <div id="venedig">
-                <section>
-                    <h5>Venedig</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsam similique eius nulla aspernatur reprehenderit quas, et repellendus quod voluptatibus aut repudiandae laborum nisi est fugiat eveniet, earum officiis laudantium.</p>
-                </section>
-            </div>
-
-            <div id="sangi">
-                <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsam similique eius nulla aspernatur reprehenderit quas, et repellendus quod voluptatibus aut repudiandae laborum nisi est fugiat eveniet, earum officiis laudantium.</p>
-                </section>
-            </div>
-        </aside>
-    </main>
-
-    <footer>
-        <section>
-            <h4>Some header</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quam ipsa inventore commodi, ut eos quibusdam repellendus fugiat quo similique vel error amet. Ullam minima iusto doloremque, quibusdam dolor dignissimos!</p>
-        </section>
-
-        <section id="boss">
-            <h4>Some header</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quam ipsa inventore commodi, ut eos quibusdam repellendus fugiat quo similique vel error amet. Ullam minima iusto doloremque, quibusdam dolor dignissimos!</p>
-        </section>
-
-        <section>
-            <h4>Some header</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quam ipsa inventore commodi, ut eos quibusdam repellendus fugiat quo similique vel error amet. Ullam minima iusto doloremque, quibusdam dolor dignissimos!</p>
-        </section>
-    </footer>
+    <a href="01_intro/index.html">01_intro</a>
+    <a href="05_Maximus/index.html">05_Maximus</a>
+    <a href="07_Grids/index.html">07_Grids</a>
+    <a href="071_Grids/index.html">071_Grids</a>
+    <a href="Recept/index.html">Recept</a>
 </body>
-
 </html>
